--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "final-form": "^4.20.10",
+    "gh-pages": "^6.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
@@ -18,7 +21,8 @@
     "react-final-form": "^6.5.9",
     "react-redux": "^9.1.0",
     "redux-saga": "^1.3.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,5 +31,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
-  }
+  },
+  "homepage": "https://vanbogota.github.io/antipoff"
 }
